Add basic index mark-up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link href=".\resources\styles\styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <header>
+      <div id="logo">
+      </div>
+      <div id="navigation">
+      </div>
+    </header>
   </body>
 </html>
