Finish fixed header and start footer mark-up

--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
   </head>
   <body>
     <header>
-      <div id="logo">
-      </div>
-      <div id="navigation">
+      <div id="header-container">
+        <div id="logo">
+          <img id="logo-img" src=".\resources\media\img-myt-logo.jpg">
+          <span id="logo-text" class="header-text">My Times</span>
+        </div>
+        <nav id="nav-bar">
+          <span id="nav-home" class="header-text nav-element">World</span>
+          <span id="nav-us" class="header-text nav-element">U.S.</span>
+          <span id="nav-tech" class="header-text nav-element">Tech</span>
+          <span id="nav-science" class="header-text nav-element">Science</span>
+        </nav>
       </div>
     </header>
+    <div id="site-main"></div>
+    <footer>
+      <div id="footer-content">
+        <nav id="nav-footer">
+          <span class="header-text footer-logo">My Times</span>
+          <span class="header-text footer-logo">|</span>
+          <span class="header-text nav-element">World</span>
+          <span class="header-text nav-element">U.S.</span>
+          <span class="header-text nav-element">Tech</span>
+          <span class="header-text nav-element">Science</span>
+        </nav>
+        <div >
+          <span id="footer-copyright"> © 2016, My Times (A Division of Codecademy bite)</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
