Finish footer mark-up and styling

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <div id="site-main"></div>
     <footer>
       <div id="footer-content">
-        <nav id="nav-footer">
-          <span class="header-text footer-logo">My Times</span>
-          <span class="header-text footer-logo">|</span>
-          <span class="header-text nav-element">World</span>
-          <span class="header-text nav-element">U.S.</span>
-          <span class="header-text nav-element">Tech</span>
-          <span class="header-text nav-element">Science</span>
+        <nav id="nav-footer" class="footer-element">
+          <span class="footer-text footer-logo">My Times</span>
+          <span class="footer-text footer-logo">|</span>
+          <span class="footer-text">World</span>
+          <span class="footer-text">U.S.</span>
+          <span class="footer-text">Tech</span>
+          <span class="footer-text">Science</span>
         </nav>
-        <div >
+        <div  class="footer-element">
           <span id="footer-copyright"> © 2016, My Times (A Division of Codecademy bite)</span>
         </div>
       </div>
