Create main content and column mark-up in index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
         </nav>
       </div>
     </header>
-    <div id="site-main"></div>
+    <div id="main">
+      <div id="main-content">
+        <div class="column-large">
+          <h2>Column Large</h2>
+        </div>
+        <div class="column-medium">
+          <h2>Column Medium</h2>
+        </div>
+        <div class="column-small">
+          <h2>Column small</h2>
+        </div>
+      </div>
+    </div>
     <footer>
       <div id="footer-content">
         <nav id="nav-footer" class="footer-element">
