--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
         </nav>
       </div>
     </header>
-    <div id="main">
-      <div id="main-content">
-        <div class="column-large">
-          <h2>Column Large</h2>
+    <div id="site-main">
+      <div id="content">
+        <div id="col-large" class="column large">
+          <div id="art-main" class="teaser-image">
+            <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
+          </div>
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
         </div>
-        <div class="column-medium">
+        <div id="col-medium" class="column medium">
           <h2>Column Medium</h2>
         </div>
-        <div class="column-small">
+        <div id="col-small" class="column small">
           <h2>Column small</h2>
         </div>
       </div>
