Finish large column and refacture teaser classes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,28 @@
     <div id="site-main">
       <div id="content">
         <div id="col-large" class="column large">
-          <div id="art-main" class="teaser-image">
-            <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
+          <div class=".teaser.main-w600">
+            <div class="teaser main-w600 teaser image" style="  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png)">
+              <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
+            </div>
+            <div>
+              <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+            </div>
           </div>
-          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+          <div class="teaser story w300">
+            <h2>Orca Spends Vacation at Land World Puget</h2>
+            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          </div>
+          <div class="teaser story w300">
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          </div>
+          <div id="Earth-spin" class="teaser image w300" style="background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png)">
+            <h2>Earth Spins Backwards for 2017</h2>
+          </div>
+          <div id="camera-memory" class="teaser image w300" style="background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png)">
+            <h2>Research Shows Cameras Erase Memory</h2>
+          </div>
         </div>
         <div id="col-medium" class="column medium">
           <h2>Column Medium</h2>
