Fix teaser image position and clean CCS structure

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="site-main">
       <div id="content">
         <div id="col-large" class="column large">
-          <div class=".teaser.main-w600">
-            <div class="teaser main-w600 teaser image" style="  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png)">
+          <div class="teaser w630">
+            <div class="teaser image w630" style="  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png)">
               <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
             </div>
             <div>
