Create vertical nav for right column

--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
           </div>
         </div>
         <div id="col-small" class="column small">
-          <h2>Column small</h2>
+          <div class="">
+            <span class="nav-vertical">Cat Emoji Goes Viral</span>
+            <span class="nav-vertical">Buy Youtube Views</span>
+            <span class="nav-vertical">Home Business Advertising Ideas</span>
+            <span class="nav-vertical">Advertising Internet Online</span>
+            <span class="nav-vertical">Illustration in Marketing Materials</span>
+            <span class="nav-vertical">Finally a Top Secret Way You Can</span>
+          </div>
         </div>
       </div>
     </div>
