Finish right column content - website done

--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
           </div>
         </div>
         <div id="col-small" class="column small">
-          <div class="">
-            <span class="nav-vertical">Cat Emoji Goes Viral</span>
-            <span class="nav-vertical">Buy Youtube Views</span>
-            <span class="nav-vertical">Home Business Advertising Ideas</span>
-            <span class="nav-vertical">Advertising Internet Online</span>
-            <span class="nav-vertical">Illustration in Marketing Materials</span>
-            <span class="nav-vertical">Finally a Top Secret Way You Can</span>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png">
+          <h3 id="nav-vertical-header">News bites</h3>
+          <div id="nav-vertical">
+            <span>Cat Emoji Goes Viral</span>
+            <span>Buy Youtube Views</span>
+            <span>Home Business Advertising Ideas</span>
+            <span>Advertising Internet Online</span>
+            <span>Illustration in Marketing Materials</span>
+            <span>Finally a Top Secret Way You Can</span>
           </div>
         </div>
       </div>
